initial homepage testing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><strong>Home Page</strong></title>
+		<title>Home Page</title>
 	</head>
+	<body>
+		<h1>test</h1>
+		<h2>test <strong>pibble</strong> test</h2>
+	</body>
 </html>
