--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 	<body>
 		<h1>test</h1>
 		<h2>test <strong>pibble</strong> test</h2>
+		<img src="images/pibble.jpg" alt="Pibmage">
+		<h3><i>Fig. 1 pib image</i></h3>
 	</body>
 </html>
