--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<body bgcolor="#393939">
-
+	<head bgcolor="#393939">
 		<table width="1000" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="left">
@@ -14,26 +13,32 @@
 		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="center">
-					<a href="index.html"><img src="images/home.png" width="300"></a>
+					<a href="index.html"><img src="images/home.png" width="300" style="display:block"></a>
 				</td>
 				<td align="center">
-					<a href="images.html"><img src="images/images.png" width="300"></a>
+					<a href="images.html"><img src="images/images.png" width="300" style="display:block"></a>
 				</td>
 				<td align="center">
-					<a href="videos.html"><img src="images/videos.png" width="300"></a>
+					<a href="videos.html"><img src="images/videos.png" width="300" style="display:block"></a>
 				</td>
 				<td align="center">
-					<a href="about.html"><img src="images/about-us-active.png" width="300"></a>
+					<a href="about.html"><img src="images/about-us-active.png" width="300" style="display:block"></a>
 				</td>
 			</tr>
 		</table>
 		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="center">
-				<img src="images/asset-1.png" align="center" width="1200">
+				<img src="images/asset-1.png" align="center" width="1200" style="display:block">
 				</td>
 			</tr>
 		</table>
+	</head>
+	
+	
+	<body bgcolor="#393939">
+
+		<!-- Add page content here -->
 
 	</body>
 </html>
