--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head bgcolor="#393939">
-		<table width="1000" align="center" border="0" cellpadding="0" cellspacing="0">
+	<head>
+		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
-				<td align="left">
-				<h2>test <strong>pibble</strong></h2>
-				<img src="images/pibble.jpg" width="100" height="100" alt="Pibmage" align="left">
+				<td align="center">
+				<img src="images/beato.jpg" width="1200" height="200" alt="banner" align="center">
 				</td>
 			</tr>
 		</table>
@@ -36,7 +35,7 @@
 	</head>
 	
 	
-	<body bgcolor="#393939">
+	<body>
 
 		<!-- Add page content here -->
 
