--- a/images.html
+++ b/images.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="center">
@@ -36,8 +37,30 @@
 	
 	
 	<body>
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="D9D9D9">
+			<tr>
+				<td width="45%">
+					<img src="images/frieren-beyond-journeys-end-new-key-visual.webp" height="700" width="500">
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Frieren: Beyond Journey's End<br>IMDB Rating: 8.9</strong></h1>
+									<br>
+									Elf mage Frieren and her fellow adventurers have defeated the Demon King and brought peace to the land.
+									But Frieren will long outlive the rest of her former party. 
+									How will she come to understand what life means to the people around her?
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
 
-		<!-- Add page content here -->
+		</table>
 
 	</body>
 </html>
