--- a/images.html
+++ b/images.html
@@ -4,7 +4,7 @@
 		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="center">
-				<img src="images/beato.jpg" width="1200" height="200" alt="banner" align="center">
+				<img src="images/beato.png" width="1200" height="200" alt="banner" align="center">
 				</td>
 			</tr>
 		</table>
@@ -36,7 +36,8 @@
 	
 	
 	<body>
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="D9D9D9">
+
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="E6ECF1">
 			<tr>
 				<td width="45%">
 					<img src="images/frieren-beyond-journeys-end-new-key-visual.webp" height="700" width="500">
@@ -47,11 +48,35 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Frieren: Beyond Journey's End<br>IMDB Rating: 8.9</strong></h1>
+									<h1><strong>Frieren: Beyond Journey's End<br><font color ="DBA506">IMDB</font> <font color ="000000">Rating</font>: 8.9</strong></h1>
 									<br>
-									Elf mage Frieren and her fellow adventurers have defeated the Demon King and brought peace to the land.
+									<i>Elf mage Frieren and her fellow adventurers have defeated the Demon King and brought peace to the land.
 									But Frieren will long outlive the rest of her former party. 
-									How will she come to understand what life means to the people around her?
+									How will she come to understand what life means to the people around her?</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+		</table>
+
+				<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="E6ECF1">
+			<tr>
+				<td width="45%">
+					<img src="images/steinsgate.jpg" height="700" width="500">
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Steins;Gate<br><font color ="DBA506">IMDB</font> <font color ="000000">Rating</font>: 8.8</strong></h1>
+									<br>
+									<i>After discovering time travel, a university student and his colleagues must use their knowledge
+									of it to stop an evil organization and their diabolical plans.</i>
 								</font>
 							</td>
 						</tr>
