--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="center">
-				<img src="images/beato.jpg" width="1200" height="200" alt="banner" align="center">
+				<img src="images/beato.png" width="1200" height="200" alt="banner" align="center">
 				</td>
 			</tr>
 		</table>
