--- a/images.html
+++ b/images.html
@@ -35,9 +35,9 @@
 	</head>
 	
 	
-	<body>
+	<body bgcolor="E6F8FE">
 
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="E6ECF1">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/frieren-beyond-journeys-end-new-key-visual.webp" height="700" width="500">
@@ -48,8 +48,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Frieren: Beyond Journey's End<br><font color ="DBA506">IMDB</font> <font color ="000000">Rating</font>: 8.9</strong></h1>
-									<br>
+									<h1><strong>Frieren: Beyond Journey's End<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 8.9</strong></h1>
 									<i>Elf mage Frieren and her fellow adventurers have defeated the Demon King and brought peace to the land.
 									But Frieren will long outlive the rest of her former party. 
 									How will she come to understand what life means to the people around her?</i>
@@ -62,7 +61,7 @@
 
 		</table>
 
-				<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="E6ECF1">
+				<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/steinsgate.jpg" height="700" width="500">
@@ -73,8 +72,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Steins;Gate<br><font color ="DBA506">IMDB</font> <font color ="000000">Rating</font>: 8.8</strong></h1>
-									<br>
+									<h1><strong>Steins;Gate<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 8.8</strong></h1>
 									<i>After discovering time travel, a university student and his colleagues must use their knowledge
 									of it to stop an evil organization and their diabolical plans.</i>
 								</font>
