--- a/videos.html
+++ b/videos.html
@@ -36,8 +36,28 @@
 	
 	
 	<body bgcolor="E6F8FE">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%">
+					<video height="700" width="500" controls>
+  						<source src="videos/clip-1.mp4" type="video/mp4">
+					</video>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>GOSL<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 8.9</strong></h1>
+									<i>Reze timelapse</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
 
-		<!-- Add page content here -->
-
+		</table>
 	</body>
 </html>
