--- a/images.html
+++ b/images.html
@@ -69,7 +69,7 @@
 
 		</table>
 
-				<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/steinsgate.jpg" height="700" width="500" style="display:block;">
@@ -83,6 +83,28 @@
 									<h1><strong>Steins;Gate<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 8.8</strong></h1>
 									<i>After discovering time travel, a university student and his colleagues must use their knowledge
 									of it to stop an evil organization and their diabolical plans.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+		</table>
+
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%">
+					<img src="images/fullmetal.webp" height="700" width="500" style="display:block;">
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Fullmetal Alchemist<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 9.1</strong></h1>
+									<i>After a failed attempt to resurrect their mother through forbidden alchemy, brothers Edward and Alphonse Elric suffer devastating consequences—Edward loses an arm and a leg, while Alphonse loses his entire body, his soul bound to a suit of armor. With the help of automail prosthetics, they set out to find the Philosopher’s Stone, hoping to restore their bodies. Along the way, they uncover a dangerous conspiracy that threatens the entire world.</i>
 								</font>
 							</td>
 						</tr>
