--- a/images.html
+++ b/images.html
@@ -113,6 +113,28 @@
 			</tr>
 
 		</table>
+		
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%">
+					<img src="images/rent-a-girlfriend.jpg" height="700" width="500" style="display:block;">
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Rent-a-Girlfriend<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 6.8</strong></h1>
+									<i>After being dumped by his girlfriend, a college student enlists a dating service to "rent" a girlfriend who, unbeknownst to him, happens to be both a fellow student and his neighbor.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+
+		</table>
 
 	</body>
 </html>
