--- a/videos.html
+++ b/videos.html
@@ -13,22 +13,22 @@
 		  <tr>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="index.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">HOME</font>
+				<font face="tahoma" color="#314865" size="6">HOME</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="images.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">IMAGES</font>
+				<font face="tahoma" color="#314865" size="6">IMAGES</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#A8C0E6" width="300" height="100" valign="middle">
 			  <a href="videos.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">VIDEOS</font>
+				<font face="tahoma" color="#314865" size="6">VIDEOS</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="about.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">ABOUT US</font>
+				<font face="tahoma" color="#314865" size="6">ABOUT US</font>
 			  </a>
 			</td>
 		  </tr>
