UI update, needs more tweak

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 	</head>
 	
 	
-	<body bgcolor="E6F8FE">
+	<body bgcolor="E6F8FE" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
 
 		<!-- Add page content here -->
 
