--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="center">
-				<img src="images/beato.png" width="1200" height="200" alt="banner" align="center">
+				<img src="images/beato.png" width="1200" height="200" alt="banner" align="center" style="display:block">
 				</td>
 			</tr>
 		</table>
@@ -13,7 +13,7 @@
 		  <tr>
 			<td align="center" bgcolor="#A8C0E6" width="300" height="100" valign="middle">
 			  <a href="index.html" style="text-decoration:none;">
-				<font face="tahoma" color="#314865" size="6">HOME</font>
+				<font face="tahoma" color="#314865" size="6"><strong>HOME</strong></font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
@@ -41,11 +41,203 @@
 			</tr>
 		</table>
 	</head>
-	
-	
-	<body bgcolor="E6F8FE">
-		
-		<!-- Add page content here -->
-		
+
+
+	<body bgcolor="E6F8FE" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
+
+		<!-- WELCOME SECTION -->
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td align="center">
+					<br>
+					<font face="tahoma" color="#314865">
+						<h1><strong>Most Popular Anime of the 2000s &ndash; 2020s</strong></h1>
+						<h3>A celebration of the greatest anime series across three iconic decades.</h3>
+					</font>
+					<br>
+				</td>
+			</tr>
+		</table>
+
+		<!-- DIVIDER -->
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td bgcolor="#4F7AC0" height="4"></td>
+			</tr>
+		</table>
+
+		<br>
+
+		<!-- INTRO SECTION -->
+		<table width="1200" align="center" cellpadding="30" cellspacing="0" border="0" bgcolor="#F1F2F9">
+			<tr>
+				<td align="center">
+					<font face="tahoma" color="#314865" size="4">
+						From the action-packed arcs of the early 2000s to the emotional masterpieces of the 2020s,
+						anime has captured the hearts of millions worldwide. This site covers the most beloved and
+						highly rated series that defined each generation of anime fans.
+						Whether you're a longtime otaku or just getting started, there's something here for everyone.
+					</font>
+				</td>
+			</tr>
+		</table>
+
+		<br>
+
+		<!-- DIVIDER -->
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td bgcolor="#4F7AC0" height="4"></td>
+			</tr>
+		</table>
+
+		<br>
+
+		<!-- DECADE HIGHLIGHTS -->
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td align="center">
+					<font face="tahoma" color="#314865">
+						<h2><strong>Highlights by Decade</strong></h2>
+					</font>
+				</td>
+			</tr>
+		</table>
+
+		<br>
+
+		<table width="1200" align="center" cellpadding="20" cellspacing="10" border="0">
+			<tr>
+
+				<!-- 2000s -->
+				<td width="380" valign="top" bgcolor="#F1F2F9">
+					<table width="100%" cellpadding="10" cellspacing="0" border="0">
+						<tr>
+							<td align="center" bgcolor="#4F7AC0">
+								<font face="tahoma" color="#FFFFFF" size="5"><strong>2000s</strong></font>
+							</td>
+						</tr>
+						<tr>
+							<td align="center">
+								<font face="tahoma" color="#314865" size="3">
+									<br>
+									The golden age of long-running shonen. Epic battles, unforgettable characters,
+									and stories that shaped a generation.
+									<br><br>
+									<b>Notable Titles:</b><br>
+									&#9656; Naruto (2002)<br>
+									&#9656; Fullmetal Alchemist (2003)<br>
+									&#9656; One Piece (1999&ndash;)<br>
+									&#9656; Death Note (2006)<br>
+									&#9656; Bleach (2004)<br>
+									<br>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+
+				<!-- 2010s -->
+				<td width="380" valign="top" bgcolor="#F1F2F9">
+					<table width="100%" cellpadding="10" cellspacing="0" border="0">
+						<tr>
+							<td align="center" bgcolor="#4F7AC0">
+								<font face="tahoma" color="#FFFFFF" size="5"><strong>2010s</strong></font>
+							</td>
+						</tr>
+						<tr>
+							<td align="center">
+								<font face="tahoma" color="#314865" size="3">
+									<br>
+									A decade of diversity and innovation. From dark fantasy to slice-of-life,
+									anime expanded into bold new territory.
+									<br><br>
+									<b>Notable Titles:</b><br>
+									&#9656; Attack on Titan (2013)<br>
+									&#9656; Sword Art Online (2012)<br>
+									&#9656; My Hero Academia (2016)<br>
+									&#9656; Re:Zero (2016)<br>
+									&#9656; Demon Slayer (2019)<br>
+									<br>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+
+				<!-- 2020s -->
+				<td width="380" valign="top" bgcolor="#F1F2F9">
+					<table width="100%" cellpadding="10" cellspacing="0" border="0">
+						<tr>
+							<td align="center" bgcolor="#4F7AC0">
+								<font face="tahoma" color="#FFFFFF" size="5"><strong>2020s</strong></font>
+							</td>
+						</tr>
+						<tr>
+							<td align="center">
+								<font face="tahoma" color="#314865" size="3">
+									<br>
+									A new era of cinematic quality and emotional depth. Modern anime pushes
+									the boundaries of storytelling and animation.
+									<br><br>
+									<b>Notable Titles:</b><br>
+									&#9656; Jujutsu Kaisen (2020)<br>
+									&#9656; Frieren: Beyond Journey's End (2023)<br>
+									&#9656; Chainsaw Man (2022)<br>
+									&#9656; Spy x Family (2022)<br>
+									&#9656; Oshi no Ko (2023)<br>
+									<br>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+
+			</tr>
+		</table>
+
+		<br>
+
+		<!-- DIVIDER -->
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td bgcolor="#4F7AC0" height="4"></td>
+			</tr>
+		</table>
+
+		<br>
+
+		<!-- EXPLORE SECTION -->
+		<table width="1200" align="center" cellpadding="20" cellspacing="0" border="0" bgcolor="#F1F2F9">
+			<tr>
+				<td align="center">
+					<font face="tahoma" color="#314865">
+						<h2><strong>Explore the Site</strong></h2>
+					</font>
+					<font face="tahoma" color="#314865" size="3">
+						Browse the <a href="images.html"><b>Images</b></a> gallery for iconic anime artwork,
+						check out the <a href="videos.html"><b>Videos</b></a> page for trailers and openings,
+						or head to <a href="about.html"><b>About Us</b></a> to learn more about this site.
+					</font>
+					<br><br>
+				</td>
+			</tr>
+		</table>
+
+		<br>
+
+		<!-- FOOTER -->
+		<table width="1200" align="center" cellpadding="15" cellspacing="0" border="0" bgcolor="#4F7AC0">
+			<tr>
+				<td align="center">
+					<font face="tahoma" color="#F1F2F9" size="2">
+						&copy; 2026 Most Popular Anime of the 2000s&ndash;2020s &nbsp;|&nbsp; All Rights Reserved
+					</font>
+				</td>
+			</tr>
+		</table>
+
+		<br>
+
 	</body>
 </html>
