--- a/videos.html
+++ b/videos.html
@@ -43,8 +43,8 @@
 	</head>
 	
 	
-	<body bgcolor="E6F8FE">
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+	<body bgcolor="E6F8FE" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%" valign="top">
 					<a href="https://www.youtube.com/watch?v=EOMVXqH9DSg" target="_blank">
@@ -58,10 +58,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Frieren: Beyond Journey's End<br>
-										<font color="C5A23B">IMDB</font> 
-										<font color="202A36">Rating</font>: 8.9
-									</strong></h1>
+									<h1><strong>Frieren: Beyond Journey's End</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.9</h2>
 									<i>Elf mage Frieren and her fellow adventurers have defeated the Demon King and brought peace to the land.
 									But Frieren will long outlive the rest of her former party. 
 									How will she come to understand what life means to the people around her?</i>
