--- a/images.html
+++ b/images.html
@@ -13,22 +13,22 @@
 		  <tr>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="index.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">HOME</font>
+				<font face="tahoma" color="#314865" size="6">HOME</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#A8C0E6" width="300" height="100" valign="middle">
 			  <a href="images.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">IMAGES</font>
+				<font face="tahoma" color="#314865" size="6">IMAGES</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="videos.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">VIDEOS</font>
+				<font face="tahoma" color="#314865" size="6">VIDEOS</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="about.html" style="text-decoration:none;">
-				<font face="Arial, Helvetica, sans-serif" color="#314865" size="6">ABOUT US</font>
+				<font face="tahoma" color="#314865" size="6">ABOUT US</font>
 			  </a>
 			</td>
 		  </tr>
@@ -43,9 +43,9 @@
 	</head>
 	
 	
-	<body bgcolor="E6F8FE">
+	<body bgcolor="E6F8FE" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
 
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/frieren-beyond-journeys-end-new-key-visual.webp" height="700" width="500" style="display:block;">
@@ -56,7 +56,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Frieren: Beyond Journey's End<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 8.9</strong></h1>
+									<h1><strong>Frieren: Beyond Journey's End</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.9</h2>
 									<i>Elf mage Frieren and her fellow adventurers have defeated the Demon King and brought peace to the land.
 									But Frieren will long outlive the rest of her former party. 
 									How will she come to understand what life means to the people around her?</i>
@@ -69,7 +69,7 @@
 
 		</table>
 
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/steinsgate.jpg" height="700" width="500" style="display:block;">
@@ -80,7 +80,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Steins;Gate<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 8.8</strong></h1>
+									<h1><strong>Steins;Gate</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.8</h2>
 									<i>After discovering time travel, a university student and his colleagues must use their knowledge
 									of it to stop an evil organization and their diabolical plans.</i>
 								</font>
@@ -92,7 +92,7 @@
 
 		</table>
 
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/fullmetal.webp" height="700" width="500" style="display:block;">
@@ -103,7 +103,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Fullmetal Alchemist<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 9.1</strong></h1>
+									<h1><strong>Fullmetal Alchemist: Brotherhood</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 9.1</h2>
 									<i>After a failed attempt to resurrect their mother through forbidden alchemy, brothers Edward and Alphonse Elric suffer devastating consequences—Edward loses an arm and a leg, while Alphonse loses his entire body, his soul bound to a suit of armor. With the help of automail prosthetics, they set out to find the Philosopher’s Stone, hoping to restore their bodies. Along the way, they uncover a dangerous conspiracy that threatens the entire world.</i>
 								</font>
 							</td>
@@ -114,7 +114,7 @@
 
 		</table>
 		
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/rent-a-girlfriend.jpg" height="700" width="500" style="display:block;">
@@ -125,7 +125,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Rent-a-Girlfriend<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 6.8</strong></h1>
+									<h1><strong>Rent-a-Girlfriend</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 6.8</h2>
 									<i>After being dumped by his girlfriend, a college student enlists a dating service to "rent" a girlfriend who, unbeknownst to him, happens to be both a fellow student and his neighbor.</i>
 								</font>
 							</td>
@@ -135,7 +135,7 @@
 			</tr>
 		</table>
 
-		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="A8C0E6" bgcolor="F1F2F9">
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
 			<tr>
 				<td width="45%">
 					<img src="images/rezero.jpg" height="700" width="500" style="display:block;">
@@ -146,8 +146,8 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<h1><strong>Re: Zero - Starting Life in Another World
-									<br><font color ="C5A23B">IMDB</font> <font color ="202A36">Rating</font>: 8.1</strong></h1>
+									<h1><strong>Re: Zero - Starting Life in Another World</strong></h1>
+									<font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.1</h2>
 									<i>After being suddenly transported to another world, Subaru Natsuki
 									   and his new female partner are brutally murdered. However, Subaru
 									   awakens to a familiar scene, meeting the same girl again. The day
