--- a/images.html
+++ b/images.html
@@ -13,30 +13,29 @@
 		  <tr>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="index.html" style="text-decoration:none;">
-				<font face="tahoma" color="#314865" size="6">HOME</font>
+				<font face="tahoma" color="#F1F2F9" size="6">HOME</font>
 			  </a>
 			</td>
-			<td align="center" bgcolor="#A8C0E6" width="300" height="100" valign="middle">
+			<td align="center" bgcolor="#F1F2F9" width="300" height="100" valign="middle">
 			  <a href="images.html" style="text-decoration:none;">
 				<font face="tahoma" color="#314865" size="6">IMAGES</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="videos.html" style="text-decoration:none;">
-				<font face="tahoma" color="#314865" size="6">VIDEOS</font>
+				<font face="tahoma" color="#F1F2F9" size="6">VIDEOS</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="about.html" style="text-decoration:none;">
-				<font face="tahoma" color="#314865" size="6">ABOUT US</font>
+				<font face="tahoma" color="#F1F2F9" size="6">ABOUT US</font>
 			  </a>
 			</td>
 		  </tr>
 		</table>
 		<table width="1200" align="center" border="0" cellpadding="0" cellspacing="0">
 			<tr>
-				<td align="center">
-				<img src="images/asset-1.png" align="center" width="1200" style="display:block">
+				<td align="center" bgcolor="#F1F2F9" width="1200" height="10" valign="middle">
 				</td>
 			</tr>
 		</table>
@@ -156,6 +155,22 @@
 							</td>
 						</tr>
 					</table>
+				</td>
+			</tr>
+		</table>
+
+
+
+
+
+
+		<!-- FOOTER -->
+		<table width="1200" align="center" cellpadding="15" cellspacing="0" border="0" bgcolor="#4F7AC0">
+			<tr>
+				<td align="center">
+					<font face="tahoma" color="#F1F2F9" size="2">
+						&copy; 2026 Most Popular Anime of the 2000s&ndash;2020s &nbsp;|&nbsp; All Rights Reserved
+					</font>
 				</td>
 			</tr>
 		</table>
