Home page UI tweaks

--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@
 		  <tr>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="index.html" style="text-decoration:none;">
-				<font face="tahoma" color="#F1F2F9" size="6"><strong>HOME</strong></font>
+				<font face="tahoma" color="#F1F2F9" size="6">HOME</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
 			  <a href="images.html" style="text-decoration:none;">
-				<font face="tahoma" color="#F1F2F9" size="6"><strong>IMAGES</strong></font>
+				<font face="tahoma" color="#F1F2F9" size="6">IMAGES</font>
 			  </a>
 			</td>
 			<td align="center" bgcolor="#4F7AC0" width="300" height="100" valign="middle">
