--- a/index.html
+++ b/index.html
@@ -44,19 +44,38 @@
 
 	<body bgcolor="E6F8FE" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
 
+		<br>
+
+		<!-- DIVIDER -->
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			</tr>
+		</table>
+
+		<br>
 		<!-- WELCOME SECTION -->
 		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
 			<tr>
-				<td align="center">
-					<br>
+				<td align="center" bgcolor="#F1F2F9" width="300" height="10" valign="middle">
 					<font face="tahoma" color="#314865">
-						<h1><strong>Most Popular Anime of the 2000s &ndash; 2020s</strong></h1>
-						<h3>A celebration of the greatest anime series across three iconic decades.</h3>
+						<h1><strong>Welcome to <font color="4781DA">AnimeGemList!</font></strong></h1>
 					</font>
-					<br>
 				</td>
 			</tr>
 		</table>
+
+		<br>
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td align="center">
+					<font face="tahoma" color="#314865">
+						<h3>A list of the most popular anime series across three iconic decades.</h3>
+					</font>
+					<img src="images/kurisu.gif">
+				</td>
+			</tr>
+		</table>
+		<br>
 
 		<!-- DIVIDER -->
 		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
@@ -73,7 +92,7 @@
 				<td align="center">
 					<font face="tahoma" color="#314865" size="4">
 						From the action-packed arcs of the early 2000s to the emotional masterpieces of the 2020s,
-						anime has captured the hearts of millions worldwide. This site covers the most beloved and
+						anime has captured the hearts of millions worldwide. This site has a list of the most beloved and
 						highly rated series that defined each generation of anime fans.
 						Whether you're a longtime otaku or just getting started, there's something here for everyone.
 					</font>
@@ -99,9 +118,9 @@
 						<h2><strong>Explore the Site</strong></h2>
 					</font>
 					<font face="tahoma" color="#314865" size="3">
-						Browse the <a href="images.html"><b>Images</b></a> gallery for iconic anime artwork,
-						check out the <a href="videos.html"><b>Videos</b></a> page for trailers and openings,
-						or head to <a href="about.html"><b>About Us</b></a> to learn more about this site.
+						Browse the <a href="images.html"><b>Images</b></a> page for posters and descriptions,
+						check out the <a href="videos.html"><b>Videos</b></a> page for trailers,
+						or head to <a href="about.html"><b>About Us</b></a> to learn more about us.
 					</font>
 					<br><br>
 				</td>
