added trailers to videos page

--- a/videos.html
+++ b/videos.html
@@ -68,6 +68,135 @@
 				</td>
 			</tr>
 		</table>
+		
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%" valign="top">
+					<a href="https://www.youtube.com/watch?v=uMYhjVwp0Fk" target="_blank">
+						<img src="https://img.youtube.com/vi/uMYhjVwp0Fk/maxresdefault.jpg" 
+							width="560" height="315" style="display:block">
+					</a>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="20">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Steins;Gate</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.8</h2>
+									<i>After discovering time travel, a university student and his colleagues must use their knowledge
+									of it to stop an evil organization and their diabolical plans.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+		
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%" valign="top">
+					<a href="https://www.youtube.com/watch?v=kx0nBaS_q50" target="_blank">
+						<img src="https://img.youtube.com/vi/kx0nBaS_q50/maxresdefault.jpg" 
+							width="560" height="315" style="display:block">
+					</a>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="20">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Fullmetal Alchemist: Brotherhood</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 9.1</h2>
+									<i>After a failed attempt to resurrect their mother through forbidden alchemy, brothers Edward and Alphonse Elric suffer devastating consequences—Edward loses an arm and a leg, while Alphonse loses his entire body, his soul bound to a suit of armor. With the help of automail prosthetics, they set out to find the Philosopher’s Stone, hoping to restore their bodies. Along the way, they uncover a dangerous conspiracy that threatens the entire world.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+		
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%" valign="top">
+					<a href="https://www.youtube.com/watch?v=ETx4q3k0X64" target="_blank">
+						<img src="https://img.youtube.com/vi/ETx4q3k0X64/maxresdefault.jpg" 
+							width="560" height="315" style="display:block">
+					</a>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="20">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Rent-a-Girlfriend</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 6.8</h2>
+									<i>After being dumped by his girlfriend, a college student enlists a dating service to "rent" a girlfriend who, unbeknownst to him, happens to be both a fellow student and his neighbor.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+		
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%" valign="top">
+					<a href="https://www.youtube.com/watch?v=Slz_rahWp6Y" target="_blank">
+						<img src="https://img.youtube.com/vi/Slz_rahWp6Y/maxresdefault.jpg" 
+							width="560" height="315" style="display:block">
+					</a>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="20">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Re: Zero - Starting Life in Another World</strong></h1>
+									<font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.1</h2>
+									<i>After being suddenly transported to another world, Subaru Natsuki
+									   and his new female partner are brutally murdered. However, Subaru
+									   awakens to a familiar scene, meeting the same girl again. The day
+									   begins to mysteriously repeat itself.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+		
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%" valign="top">
+					<a href="https://www.youtube.com/watch?v=tJZtOrm-WPk" target="_blank">
+						<img src="https://img.youtube.com/vi/NlJZ-YgAt-c/maxresdefault.jpg"
+							width="560" height="315" style="display:block">
+					</a>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="20">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Death Note</strong></h1>
+									<font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.9</h2>
+									<i>An intelligent high school student goes on a secret crusade to eliminate criminals 
+									from the world after discovering a notebook capable of killing anyone whose name is 
+									written into it.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+
 
 	<!-- FOOTER -->
 	<table width="1200" align="center" cellpadding="15" cellspacing="0" border="0" bgcolor="#4F7AC0">
