--- a/images.html
+++ b/images.html
@@ -103,7 +103,12 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<h1><strong>Fullmetal Alchemist: Brotherhood</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 9.1</h2>
-									<i>After a failed attempt to resurrect their mother through forbidden alchemy, brothers Edward and Alphonse Elric suffer devastating consequences—Edward loses an arm and a leg, while Alphonse loses his entire body, his soul bound to a suit of armor. With the help of automail prosthetics, they set out to find the Philosopher’s Stone, hoping to restore their bodies. Along the way, they uncover a dangerous conspiracy that threatens the entire world.</i>
+									<i>After a failed attempt to resurrect their mother through forbidden alchemy, 
+									brothers Edward and Alphonse Elric suffer devastating consequences—Edward loses 
+									an arm and a leg, while Alphonse loses his entire body, his soul bound to a suit 
+									of armor. With the help of automail prosthetics, they set out to find the 
+									Philosopher’s Stone, hoping to restore their bodies. Along the way, they 
+									uncover a dangerous conspiracy that threatens the entire world.</i>
 								</font>
 							</td>
 						</tr>
@@ -125,7 +130,9 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<h1><strong>Rent-a-Girlfriend</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 6.8</h2>
-									<i>After being dumped by his girlfriend, a college student enlists a dating service to "rent" a girlfriend who, unbeknownst to him, happens to be both a fellow student and his neighbor.</i>
+									<i>After being dumped by his girlfriend, a college student enlists a dating 
+									service to "rent" a girlfriend who, unbeknownst to him, happens to be both 
+									a fellow student and his neighbor.</i>
 								</font>
 							</td>
 						</tr>
@@ -151,6 +158,30 @@
 									   and his new female partner are brutally murdered. However, Subaru
 									   awakens to a familiar scene, meeting the same girl again. The day
 									   begins to mysteriously repeat itself.</i>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+		
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="50" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td width="45%">
+					<img src="images/death_note.jpg" height="700" width="500" style="display:block;">
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<h1><strong>Death Note</strong></h1>
+									<font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.9</h2>
+									<i>An intelligent high school student goes on a secret crusade to eliminate criminals 
+									from the world after discovering a notebook capable of killing anyone whose name is 
+									written into it.</i>
 								</font>
 							</td>
 						</tr>
