Added structure on the About us page

--- a/about.html
+++ b/about.html
@@ -43,18 +43,120 @@
 	
 	
 	<body bgcolor="E6F8FE" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
+		<br>
+		<!-- WELCOME SECTION -->
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td align="center" bgcolor="#F1F2F9" width="300" height="10" valign="middle">
+					<font face="tahoma" color="#314865">
+						<h1><a href="https://github.com/Ethanerz/cmsc126-JJEMAlert-Lab3-HTML" >Github Link</a></h1>
+					</font>
+				</td>
+			</tr>
+		</table>
 
-		<!-- Add page content here -->
+		<br>
 
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<!-- Add your image here -->
+									<img src="images/pibble.jpg">
+									<h1 align="center"><strong>Marc Raven Sian</strong></h1>
+									<h4><font color ="202A36">Worked on:</font></h4>
+									<i>Hi</i>
+									<h4><font color ="202A36">Socials:</font></h4>
+									<img src="/images/github-logo.png" height="30" width="30">
+									<!-- add your github link here -->
+									<a href="">Marc Raven Sian</a>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<!-- Add your image here -->
+									<img src="images/pibble.jpg">
+									<h1 align="center"><strong>Ethan Gapulan</strong></h1>
+									<h4><font color ="202A36">Worked on:</font></h4>
+									<i>Hi</i>
+									<h4><font color ="202A36">Socials:</font></h4>
+									<img src="/images/github-logo.png" height="30" width="30">
+									<!-- add your github link here -->
+									<a href="">Ethan Gapulan</a>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+
+		<br>
+
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0">
+			<tr>
+				<td bgcolor="#4F7AC0" height="4"></td>
+			</tr>
+		</table>
+
+		<br>
+
+		<table width="1200" align="center" cellpadding="0" cellspacing="0" border="0" bordercolor="E6F8FE" bgcolor="F1F2F9">
+			<tr>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<!-- Add your image here -->
+									<img src="images/pibble.jpg">
+									<h1 align="center"><strong>John Patrick Salomeo</strong></h1>
+									<h4><font color ="202A36">Worked on:</font></h4>
+									<i>Hi</i>
+									<h4><font color ="202A36">Socials:</font></h4>
+									<img src="/images/github-logo.png" height="30" width="30">
+									<!-- add your github link here -->
+									<a href="">John Patrick Salomeo</a>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+				<td valign="top">
+					<br><br>
+					<table align="center" cellpadding="50">
+						<tr>
+							<td align="left">
+								<font face="tahoma" color="314865">
+									<!-- Add your image here -->
+									<img src="images/pibble.jpg">
+									<h1 align="center"><strong>John Dave Valentin</strong></h1>
+									<h4><font color ="202A36">Worked on:</font></h4>
+									<i>Hi</i>
+									<h4><font color ="202A36">Socials:</font></h4>
+									<img src="/images/github-logo.png" height="30" width="30">
+									<!-- add your github link here -->
+									<a href="">John Dave Valentin</a>
+								</font>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
 	</body>
-
-
-
-
-
-
-
-
 
 	<!-- FOOTER -->
 	<table width="1200" align="center" cellpadding="15" cellspacing="0" border="0" bgcolor="#4F7AC0">
