--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<i>Hi</i>
 									<h4><font color ="202A36">Socials:</font></h4>
-									<img src="/images/github-logo.png" height="30" width="30">
+									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
 									<a href="">Marc Raven Sian</a>
 								</font>
@@ -91,7 +91,7 @@
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<i>Hi</i>
 									<h4><font color ="202A36">Socials:</font></h4>
-									<img src="/images/github-logo.png" height="30" width="30">
+									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
 									<a href="">Ethan Gapulan</a>
 								</font>
@@ -126,7 +126,7 @@
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<i>Hi</i>
 									<h4><font color ="202A36">Socials:</font></h4>
-									<img src="/images/github-logo.png" height="30" width="30">
+									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
 									<a href="">John Patrick Salomeo</a>
 								</font>
@@ -146,7 +146,7 @@
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<i>Hi</i>
 									<h4><font color ="202A36">Socials:</font></h4>
-									<img src="/images/github-logo.png" height="30" width="30">
+									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
 									<a href="">John Dave Valentin</a>
 								</font>
