added own about info

--- a/about.html
+++ b/about.html
@@ -85,15 +85,13 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<!-- Add your image here -->
-									<img src="images/pibble.jpg">
+									<img src="images/ethan_pic.JPG" width="235" height="195">
 									<h1 align="center"><strong>Ethan Gapulan</strong></h1>
-									<h4><font color ="202A36">Worked on:</font></h4>
-									<i>Hi</i>
+									<h4><font color ="202A36">Worked on: <br>Videos Page, <br> Navigation Bar touch-ups</font></h4>
+									<i>Penguin</i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
-									<!-- add your github link here -->
-									<a href="">Ethan Gapulan</a>
+									<a href="https://github.com/Ethanerz">Ethan Gapulan</a>
 								</font>
 							</td>
 						</tr>
