Added info on John Dave Valentin

--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
 									<img src="images/pibble.jpg">
 									<h1 align="center"><strong>Marc Raven Sian</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
+									<!-- Add your worked on details here-->
 									<i>Hi</i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
@@ -87,8 +88,9 @@
 								<font face="tahoma" color="314865">
 									<img src="images/ethan_pic.JPG" width="235" height="195">
 									<h1 align="center"><strong>Ethan Gapulan</strong></h1>
-									<h4><font color ="202A36">Worked on: <br>Videos Page, <br> Navigation Bar touch-ups</font></h4>
-									<i>Penguin</i>
+									<h4><font color ="202A36">Worked on:</font></h4>
+									<!-- Add your worked on details here-->
+									<i>Videos Page, <br> Navigation Bar touch-ups</i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
 									<a href="https://github.com/Ethanerz">Ethan Gapulan</a>
@@ -122,6 +124,7 @@
 									<img src="images/pibble.jpg">
 									<h1 align="center"><strong>John Patrick Salomeo</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
+									<!-- Add your worked on details here-->
 									<i>Hi</i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
@@ -139,14 +142,15 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<!-- Add your image here -->
-									<img src="images/pibble.jpg">
+									<img src="images/JD_pic.png" width="235" height="195">
 									<h1 align="center"><strong>John Dave Valentin</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
-									<i>Hi</i>
+									<!-- Add your worked on details here-->
+									<i>Images Page, <br> About us Page</i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
-									<a href="">John Dave Valentin</a>
+									<a href="https://github.com/Yomaruichi">John Dave Valentin</a>
 								</font>
 							</td>
 						</tr>
