--- a/about.html
+++ b/about.html
@@ -122,14 +122,14 @@
 								<font face="tahoma" color="314865">
 									<!-- Add your image here -->
 									<img src="images/pibble.jpg">
-									<h1 align="center"><strong>John Patrick Salomeo</strong></h1>
+									<h1 align="center"><strong>Joseph Patrick Salomeo</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<!-- Add your worked on details here-->
-									<i>Hi</i>
+									<i>Images Page, <br> About us Page</i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
-									<a href="">John Patrick Salomeo</a>
+									<a href="https://github.com/ysxiaixsy">Joseph Patrick Salomeo</a>
 								</font>
 							</td>
 						</tr>
