--- a/images.html
+++ b/images.html
@@ -59,6 +59,7 @@
 									<i>Elf mage Frieren and her fellow adventurers have defeated the Demon King and brought peace to the land.
 									But Frieren will long outlive the rest of her former party. 
 									How will she come to understand what life means to the people around her?</i>
+                                    <p><img src="images/gem.png" alt="Gem" width="20" height="20"> Slow burn but rewarding narrative.</p>
 								</font>
 							</td>
 						</tr>
@@ -82,6 +83,7 @@
 									<h1><strong>Steins;Gate</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.8</h2>
 									<i>After discovering time travel, a university student and his colleagues must use their knowledge
 									of it to stop an evil organization and their diabolical plans.</i>
+                                    <p><img src="images/gem.png" alt="Gem" width="20" height="20"> Clever plot twists and strong characters.</p>
 								</font>
 							</td>
 						</tr>
@@ -109,6 +111,7 @@
 									of armor. With the help of automail prosthetics, they set out to find the 
 									Philosopher’s Stone, hoping to restore their bodies. Along the way, they 
 									uncover a dangerous conspiracy that threatens the entire world.</i>
+                                    <p><img src="images/gem.png" alt="Gem" width="20" height="20"> One of the all-time greats.</p>
 								</font>
 							</td>
 						</tr>
@@ -130,9 +133,11 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<h1><strong>Rent-a-Girlfriend</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 6.8</h2>
+                                    
 									<i>After being dumped by his girlfriend, a college student enlists a dating 
 									service to "rent" a girlfriend who, unbeknownst to him, happens to be both 
 									a fellow student and his neighbor.</i>
+                                    <p><img src="images/coal.png" alt="Coal" width="20" height="20"> Low score; not our cup of tea.</p>
 								</font>
 							</td>
 						</tr>
@@ -158,6 +163,7 @@
 									   and his new female partner are brutally murdered. However, Subaru
 									   awakens to a familiar scene, meeting the same girl again. The day
 									   begins to mysteriously repeat itself.</i>
+                                    <p><img src="images/gem.png" alt="Gem" width="20" height="20"> Dark and compelling time-loop drama.</p>
 								</font>
 							</td>
 						</tr>
@@ -178,10 +184,10 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<h1><strong>Death Note</strong></h1>
-									<font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.9</h2>
-									<i>An intelligent high school student goes on a secret crusade to eliminate criminals 
+									<font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 8.9</h2>									<i>An intelligent high school student goes on a secret crusade to eliminate criminals 
 									from the world after discovering a notebook capable of killing anyone whose name is 
 									written into it.</i>
+                                    <p><img src="images/gem.png" alt="Gem" width="20" height="20"> Classic cat-and-mouse thriller.</p>
 								</font>
 							</td>
 						</tr>
