--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 					<font face="tahoma" color="#314865" size="3">
 						Browse the <a href="images.html"><b>Images</b></a> page for posters and descriptions,
 						check out the <a href="videos.html"><b>Videos</b></a> page for trailers,
-						or head to <a href="about.html"><b>About Us</b></a> to learn more about us.
+						or head to <a href="about.html"><b>About Us</b></a> to learn more about us. 
+                        <br>
+                        <strong>We rate each anime as a <img src="images/gem.png" alt="gem" width="20" height="20"> gem or <img src="images/coal.png" alt="coal" width="20" height="20"> coal on the Images page!</strong>
 					</font>
 					<br><br>
 				</td>
