--- a/videos.html
+++ b/videos.html
@@ -109,7 +109,7 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<h1><strong>Fullmetal Alchemist: Brotherhood</strong></h1><font color ="C5A23B"><h2>IMDB</font> <font color ="202A36">Rating</font>: 9.1</h2>
-									<i>After a failed attempt to resurrect their mother through forbidden alchemy, brothers Edward and Alphonse Elric suffer devastating consequences—Edward loses an arm and a leg, while Alphonse loses his entire body, his soul bound to a suit of armor. With the help of automail prosthetics, they set out to find the Philosopher’s Stone, hoping to restore their bodies. Along the way, they uncover a dangerous conspiracy that threatens the entire world.</i>
+									<i>After a forbidden alchemy attempt costs Edward his limbs and Alphonse his body, the brothers seek the Philosopher’s Stone—only to uncover a world-threatening conspiracy.</i>
 								</font>
 							</td>
 						</tr>
