Changed Home page description, Footer, and Added details for Marc Raven Sian

--- a/about.html
+++ b/about.html
@@ -66,15 +66,15 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<!-- Add your image here -->
-									<img src="images/pibble.jpg">
+									<img src="images/marc.jpg" width="235" height="235">
 									<h1 align="center"><strong>Marc Raven Sian</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<!-- Add your worked on details here-->
-									<i>Hi</i>
+									<i>Navigation bar,<br> Home page </i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
-									<a href="">Marc Raven Sian</a>
+									<a href="https://github.com/gosl1">Marc Raven Sian</a>
 								</font>
 							</td>
 						</tr>
@@ -86,7 +86,7 @@
 						<tr>
 							<td align="left">
 								<font face="tahoma" color="314865">
-									<img src="images/ethan_pic.JPG" width="235" height="195">
+									<img src="images/ethan_pic.JPG" width="235" height="235">
 									<h1 align="center"><strong>Ethan Gapulan</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<!-- Add your worked on details here-->
@@ -125,7 +125,7 @@
 									<h1 align="center"><strong>Joseph Patrick Salomeo</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<!-- Add your worked on details here-->
-									<i>Images Page, <br> About us Page</i>
+									<i>Images Page<br></i>
 									<h4><font color ="202A36">Socials:</font></h4>
 									<img src="images/github-logo.png" height="30" width="30">
 									<!-- add your github link here -->
@@ -142,7 +142,7 @@
 							<td align="left">
 								<font face="tahoma" color="314865">
 									<!-- Add your image here -->
-									<img src="images/JD_pic.png" width="235" height="195">
+									<img src="images/JD_pic.png" width="235" height="235">
 									<h1 align="center"><strong>John Dave Valentin</strong></h1>
 									<h4><font color ="202A36">Worked on:</font></h4>
 									<!-- Add your worked on details here-->
@@ -165,7 +165,7 @@
 		<tr>
 			<td align="center">
 				<font face="tahoma" color="#F1F2F9" size="2">
-					&copy; 2026 Most Popular Anime of the 2000s&ndash;2020s &nbsp;|&nbsp; All Rights Reserved
+					&copy; AnimeGemList &nbsp;|&nbsp; All Rights Reserved
 				</font>
 			</td>
 		</tr>
