--- a/images.html
+++ b/images.html
@@ -206,7 +206,7 @@
 			<tr>
 				<td align="center">
 					<font face="tahoma" color="#F1F2F9" size="2">
-						&copy; 2026 Most Popular Anime of the 2000s&ndash;2020s &nbsp;|&nbsp; All Rights Reserved
+						&copy; AnimeGemList &nbsp;|&nbsp; All Rights Reserved
 					</font>
 				</td>
 			</tr>
