--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<tr>
 				<td align="center">
 					<font face="tahoma" color="#314865">
-						<h3>A list of the most popular anime series across three iconic decades.</h3>
+						<h3>A list of the most popular anime series across the decades.</h3>
 					</font>
 					<img src="images/kurisu.gif">
 				</td>
@@ -91,9 +91,7 @@
 			<tr>
 				<td align="center">
 					<font face="tahoma" color="#314865" size="4">
-						From the action-packed arcs of the early 2000s to the emotional masterpieces of the 2020s,
-						anime has captured the hearts of millions worldwide. This site has a list of the most beloved and
-						highly rated series that defined each generation of anime fans.
+						To the people of different strides in life, Anime has captured the hearts of millions worldwide. This site has a list of the most beloved series that defined each generation of anime fans.
 						Whether you're a longtime otaku or just getting started, there's something here for everyone.
 					</font>
 				</td>
@@ -136,7 +134,7 @@
 			<tr>
 				<td align="center">
 					<font face="tahoma" color="#F1F2F9" size="2">
-						&copy; 2026 Most Popular Anime of the 2000s&ndash;2020s &nbsp;|&nbsp; All Rights Reserved
+						&copy; AnimeGemList &nbsp;|&nbsp; All Rights Reserved
 					</font>
 				</td>
 			</tr>
