--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 			<tr>
 				<td align="center">
 					<font face="tahoma" color="#314865" size="4">
-						To the people of different strides in life, Anime has captured the hearts of millions worldwide. This site has a list of the most beloved series that defined each generation of anime fans.
-						Whether you're a longtime otaku or just getting started, there's something here for everyone.
-					</font>
+						For people from all walks of life, anime has captured the hearts of millions around the world. 
+						This site features a list of the most beloved series that defined each generation of anime fans.
+						 Whether you're a longtime otaku or just getting started, there's something here for everyone.
 				</td>
 			</tr>
 		</table>
